Fix horizontal scroll on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -26,6 +26,10 @@ body {
   max-width: 100%;
 }
 
+.overflowWrap {
+  overflow: hidden;
+}
+
 .main-nav {
   padding: 0;
   a {
